--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
 <footer>
-    <p class="text-xs-center">© Copyright 2019. All rights reserved.</p>
+    <p class="text-xs-center">Nakshatram Arts... © Copyright 2019. All rights reserved.<br>
+        Contact Info : Nikhil R. Kulkarni<br>
+        Mobile Number: 9850702373
+    </p>
 </footer>
