--- a/src/app/image-details/image-details.component.html
+++ b/src/app/image-details/image-details.component.html
@@ -1,16 +1,20 @@
 <div class="container-fluid">
     <div class="row">
-        <div class=col-sm-6>
+        <div class="col-sm-6">
             <div class="img-details">
-                <div [ngStyle]="{'background-image':'url('+ image.url +')'}" class="img-container">
-                </div>
+                <div
+                    [ngStyle]="{'background-image':'url('+ image.url +')'}"
+                    class="img-container"
+                ></div>
             </div>
         </div>
-        <div class=col-sm-6>
+
+        <div class="col-sm-6">
             <div>
                 <div>
                     <h1 class="desc-text">{{ image.name }}</h1>
                 </div>
+
                 <div>
                     <h3 class="price-text">Price : Rs. {{ image.price }}</h3>
                 </div>
@@ -18,31 +22,120 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="confirm-button">
-                            <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModal">
-                                Confirm Order
-                              </button>
-
-                            <div class="modal" id="myModal">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-
-                                        <div class="modal-header">
-                                            <h4 class="modal-title">Modal Heading</h4>
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        </div>
-
-                                        <div class="modal-body">
-                                            Modal body..
-                                        </div>
-
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
+                            <button
+                                type="button"
+                                class="btn btn-primary btn-block"
+                                (click)="showModal = true"
+                                data-toggle="modal"
+                                data-target="#myModal"
+                            >Confirm Order</button>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<div
+    class="modal"
+    id="myModal"
+    [ngClass]="{'show':showModal}"
+>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!-- Modal Header -->
+
+            <div class="modal-header">
+                <h4 class="modal-title">Add your details</h4>
+
+                <button
+                    type="button"
+                    (click)="showModal = false"
+                    class="close"
+                    data-dismiss="modal"
+                >&times;</button>
+            </div>
+
+            <!-- Modal body -->
+
+            <div class="modal-body">
+                    <div class="container">
+                            
+                            <form #employeeForm="ngForm" (ngSubmit)="processForm()">
+                          
+                                                  
+                          
+                              <div class="form-group" [class.has-error]="firstNameControl.invalid && firstNameControl.touched">
+                                <label for="firstName">First Name</label>
+                                <input type="text" name="firstName" required class="form-control" [(ngModel)]="user.firstName" #firstNameControl="ngModel">
+                          
+                                <span class="help-block text-danger" *ngIf="firstNameControl.invalid && firstNameControl.touched">
+                                  First Name is required
+                                </span>
+                              </div>
+                          
+                              <div class="form-group" [class.has-error]="lastNameControl.invalid && lastNameControl.touched">
+                                <label for="lastName">Last Name</label>
+                                <input type="text" name="lastName" required class="form-control" [(ngModel)]="user.lastName" #lastNameControl="ngModel">
+                          
+                                <span class="help-block text-danger" *ngIf="lastNameControl.invalid && lastNameControl.touched">
+                                  Last Name is required
+                                </span>
+                              </div>
+
+                              <div class="form-group" [class.has-error]="emailControl.invalid && emailControl.touched">
+                                    <label for="email">Email</label>
+                                    <input type="email" name="email" required class="form-control" [(ngModel)]="user.email" #emailControl="ngModel">
+                              
+                                    <span class="help-block text-danger" *ngIf="emailControl.invalid && emailControl.touched">
+                                      Email Address is required
+                                    </span>
+                                </div>
+                          
+                          
+                              <div class="form-group" [class.has-error]="mobileNumberControl.invalid && mobileNumberControl.touched">
+                                <label for="mobileNumber">Mobile Number</label>
+                                <input type="text" name="mobileNumber" required class="form-control" [(ngModel)]="user.mobileNumber"
+                                  #mobileNumberControl="ngModel">
+                          
+                                <span class="help-block text-danger" *ngIf="mobileNumberControl.invalid && mobileNumberControl.touched">
+                                  Mobile Number is required
+                                </span>
+                              </div>
+
+                              
+                              <label for="Address">Address</label>
+                              <textarea class="form-control" name="address" rows="2" [(ngModel)]="user.address">
+                              </textarea>
+
+                            
+                              <div class="form-button">
+                              <input type="submit" value="Save" class="btn btn-success" [disabled]="employeeForm.invalid">
+                              &nbsp;
+                              <button class="btn btn-danger" (click)="back()">Cancel</button>
+                              </div>
+                            </form>
+                          </div>
+                
+            </div>
+
+            <!-- Modal footer -->
+
+            <!-- <div class="modal-footer">
+                    <button
+                    type="button"
+                    class="btn btn-primary"
+                    (click)="showModal = false"
+                    data-dismiss="modal"
+                >Submit</button>
+                <button
+                    type="button"
+                    class="btn btn-danger"
+                    (click)="showModal = false"
+                    data-dismiss="modal"
+                >Close</button>
+            </div>
+        </div> -->
+    </div>
+</div>
