--- a/src/app/image-details/image-details.component.html
+++ b/src/app/image-details/image-details.component.html
@@ -1,141 +1,29 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="img-details">
-                <div
-                    [ngStyle]="{'background-image':'url('+ image.url +')'}"
-                    class="img-container"
-                ></div>
-            </div>
-        </div>
-
-        <div class="col-sm-6">
-            <div>
-                <div>
-                    <h1 class="desc-text">{{ image.name }}</h1>
-                </div>
-
-                <div>
-                    <h3 class="price-text">Price : Rs. {{ image.price }}</h3>
-                </div>
-
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="confirm-button">
-                            <button
-                                type="button"
-                                class="btn btn-primary btn-block"
-                                (click)="showModal = true"
-                                data-toggle="modal"
-                                data-target="#myModal"
-                            >Confirm Order</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="container image-details">
+  <div class="row">
+    <div class="col-sm-3">
+      <div
+        [ngStyle]="{ 'background-image': 'url(' + image.url + ')' }"
+        class="art-image"
+      ></div>
     </div>
-</div>
-
-<div
-    class="modal"
-    id="myModal"
-    [ngClass]="{'show':showModal}"
->
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <!-- Modal Header -->
-
-            <div class="modal-header">
-                <h4 class="modal-title">Add your details</h4>
-
-                <button
-                    type="button"
-                    (click)="showModal = false"
-                    class="close"
-                    data-dismiss="modal"
-                >&times;</button>
-            </div>
-
-            <!-- Modal body -->
-
-            <div class="modal-body">
-                    <div class="container">
-                            
-                            <form #employeeForm="ngForm" (ngSubmit)="processForm()">
-                          
-                                                  
-                          
-                              <div class="form-group" [class.has-error]="firstNameControl.invalid && firstNameControl.touched">
-                                <label for="firstName">First Name</label>
-                                <input type="text" name="firstName" required class="form-control" [(ngModel)]="user.firstName" #firstNameControl="ngModel">
-                          
-                                <span class="help-block text-danger" *ngIf="firstNameControl.invalid && firstNameControl.touched">
-                                  First Name is required
-                                </span>
-                              </div>
-                          
-                              <div class="form-group" [class.has-error]="lastNameControl.invalid && lastNameControl.touched">
-                                <label for="lastName">Last Name</label>
-                                <input type="text" name="lastName" required class="form-control" [(ngModel)]="user.lastName" #lastNameControl="ngModel">
-                          
-                                <span class="help-block text-danger" *ngIf="lastNameControl.invalid && lastNameControl.touched">
-                                  Last Name is required
-                                </span>
-                              </div>
-
-                              <div class="form-group" [class.has-error]="emailControl.invalid && emailControl.touched">
-                                    <label for="email">Email</label>
-                                    <input type="email" name="email" required class="form-control" [(ngModel)]="user.email" #emailControl="ngModel">
-                              
-                                    <span class="help-block text-danger" *ngIf="emailControl.invalid && emailControl.touched">
-                                      Email Address is required
-                                    </span>
-                                </div>
-                          
-                          
-                              <div class="form-group" [class.has-error]="mobileNumberControl.invalid && mobileNumberControl.touched">
-                                <label for="mobileNumber">Mobile Number</label>
-                                <input type="text" name="mobileNumber" required class="form-control" [(ngModel)]="user.mobileNumber"
-                                  #mobileNumberControl="ngModel">
-                          
-                                <span class="help-block text-danger" *ngIf="mobileNumberControl.invalid && mobileNumberControl.touched">
-                                  Mobile Number is required
-                                </span>
-                              </div>
-
-                              
-                              <label for="Address">Address</label>
-                              <textarea class="form-control" name="address" rows="2" [(ngModel)]="user.address">
-                              </textarea>
-
-                            
-                              <div class="form-button">
-                              <input type="submit" value="Save" class="btn btn-success" [disabled]="employeeForm.invalid">
-                              &nbsp;
-                              <button class="btn btn-danger" (click)="back()">Cancel</button>
-                              </div>
-                            </form>
-                          </div>
-                
-            </div>
-
-            <!-- Modal footer -->
-
-            <!-- <div class="modal-footer">
-                    <button
-                    type="button"
-                    class="btn btn-primary"
-                    (click)="showModal = false"
-                    data-dismiss="modal"
-                >Submit</button>
-                <button
-                    type="button"
-                    class="btn btn-danger"
-                    (click)="showModal = false"
-                    data-dismiss="modal"
-                >Close</button>
-            </div>
-        </div> -->
+    <div class="col-sm-9">
+      <h3 class="desc-text pt-4">{{ image.name }}</h3>
+      <h4 class="price-text pt-4 text-primary">Rs. {{ image.price }}</h4>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi dolor
+        adipisci assumenda quasi aliquam tempora blanditiis voluptas perferendis
+        non laudantium, facere accusantium nesciunt aut repellat fugiat
+        recusandae sequi ratione eum.
+      </p>
+      <button
+        type="button"
+        class="btn btn-primary"
+        (click)="openModal()"
+        data-toggle="modal"
+        data-target="#myModal"
+      >
+        Confirm Order
+      </button>
     </div>
+  </div>
 </div>
