--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,11 +1,11 @@
 footer {
-    position: relative;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin-top: 1rem;
-    padding: 1rem;
-    text-align: center;
-    background-color: rgb(38, 97, 51);
-    color: skyblue;
+  position: relative;
+  right: 0;
+  bottom: 0%;
+  left: 0;
+  margin-top: 1rem;
+  padding: 1rem;
+  text-align: center;
+  background-color: rgb(38, 97, 51);
+  color: skyblue;
 }
