--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <p class="text-xs-center">Nakshatram Arts... © Copyright 2019. All rights reserved.<br>
         Contact Info : Nikhil R. Kulkarni<br>
-        Mobile Number: 9850702373
+        Mobile Number: +918080586933
     </p>
 </footer>
