home page changes

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,71 @@
-<footer>
-    <p class="text-xs-center">Nakshatram Arts... © Copyright 2019. All rights reserved.<br>
-        Contact Info : Nikhil R. Kulkarni<br>
-        Mobile Number: +918080586933
-    </p>
+<footer class="bg-dark py-5 mt-5">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="accordian d-lg-flex w-100" id="accordian">
+                        <div class="col-lg-4 col-md-12">
+                            <a href="#one" class="h4 text-white nav-link p-0 d-block d-lg-none d-xl-none" data-toggle="collapse" data-parent="#accordian">
+                             One
+                            </a>
+                            <div class="text-white h4 d-none d-lg-block d-xl-block">One</div>
+                            <div class="collapse text-white d-lg-flex" id="one" data-parent="#accordian">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt expedita quae vel dignissimos fugiat quod doloribus. Assumenda alias, asperiores repellendus ipsam doloremque nisi ratione reiciendis vero, porro, obcaecati rem aliquam?
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-12">
+                            <a href="#two" class="h4 text-warning nav-link p-0 d-block d-lg-none d-xl-none" data-toggle="collapse">
+                                Two
+                            </a>
+                            <div class="text-warning h4 d-none d-lg-block d-xl-block">Two</div>
+                            <div class="collapse text-white d-lg-flex" id="two" data-parent="#accordian">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt expedita quae vel dignissimos fugiat quod doloribus. Assumenda alias, asperiores repellendus ipsam doloremque nisi ratione reiciendis vero, porro, obcaecati rem aliquam?
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-12">
+                            <a href="#three" class="h4 text-white nav-link p-0 d-block d-lg-none d-xl-none" data-toggle="collapse">
+                                Connect with us..
+                            </a>
+                            <div class="text-white h4 d-none d-lg-block d-xl-block">Connect with us..</div>
+                            <div class="collapse text-white d-lg-flex" id="three" data-parent="#accordian">
+
+                                <ul class="list-unstyled d-flex w-100 justify-content-between">
+                                    <li>
+                                        <a href="#" class="nav-link p-0">
+                                            <i class="fa fa-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link p-0">
+                                            <i class="fa fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link p-0">
+                                            <i class="fa fa-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link p-0">
+                                            <i class="fa fa-youtube"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
+<div class="container-fluid footer-bar">
+    <div class="row bg-warning">
+        <div class="col-md-12">
+            <div class="d-flex justify-content-center align-items-center">
+                <span class="p-3 text-white">Nakshatram Arts!!! Copyrights &copy; Reserved 2019.</span>
+            </div>
+        </div>
+    </div>
+</div>
