--- a/src/app/image-gallary/image-gallary.component.html
+++ b/src/app/image-gallary/image-gallary.component.html
@@ -1,7 +1,8 @@
+<div [style.background]="'url(../../assets/wallpaper.jpg)'">
 <div class="page-wrapper">
   <div class="container">
     <div class="page-title">
-      <h4>Image Gallery</h4>
+      <h4 class="text-center text-white mt-2">Image Gallery</h4>
     </div>
     <div class="row">
       <div
@@ -23,4 +24,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
