--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,42 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="container">
-            <a class="navbar-brand" href="#">
-                <img class="logo-image" src="../../assets/home-logo.jpg" alt="home-logo">
-                We Enlight Art!!
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top sticky-top">
+
+    <!-- Toggle Button -->
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse-target">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Add the elements whidh you want to collapse -->
+    <!-- Notice the name of id -->
+    <div class="collapse navbar-collapse" id="collapse-target">
+
+        <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg" style="width: 100px; height:50px;"></a>
+        <!-- <span class="navbar-text">Madhav Kulkarni</span> -->
+
+
+        <ul class="navbar-nav">
+            <!-- <li class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown-target">
+                Dropdown
+                <span class="caret"></span>
             </a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-target">
+                    <a href="" class="dropdown-item">Java Videos</a>
+                    <div class="dropdown-divider"></div>
+                    <a href="" class="dropdown-item">PHP Videos</a>
+                    <div class="dropdown-divider"></div>
+                    <a href="" class="dropdown-item">Angular Videos</a>
+                </div>
+            </li> -->
+            <li class="nav-item">
+                <a [routerLink]="['/']" class="nav-link">Our Products</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Contact Us</a>
+            </li>
+        </ul>
     </div>
 </nav>
