--- a/src/app/image-gallary/image-gallary.component.html
+++ b/src/app/image-gallary/image-gallary.component.html
@@ -1,28 +1,23 @@
-<div [style.background]="'url(../../assets/wallpaper.jpg)'">
-<div class="page-wrapper">
-  <div class="container">
-    <div class="page-title">
-      <h4 class="text-center text-white mt-2">Image Gallery</h4>
-    </div>
-    <div class="row">
-      <div
-        class="col-sm-6 col-md-4 col-lg-3"
-        *ngFor="let item of allImages | filterimages: filterBy"
-      >
-        <div class="card gallery-card">
-          <div class="card-body">
-            <img class="img-fluid" src="{{ item.url }}" />
-            <p class="price-tag">Price: {{ item.price }}</p>
-            <button
-              class="btn btn-primary btn-block"
-              [routerLink]="['/details', item.id]"
-            >
-              Order Now
+<!-- <div class="bg-page" [style.background]="'url(../../assets/wallpaper.jpg)'"> -->
+<div [ngStyle]="{background: 'url(../../assets/wallpaper.jpg ) no-repeat 0 0', 'background-size': 'cover'}">
+    <div class="page-wrapper">
+        <div class="container">
+            <div class="page-title">
+                <h4 class="text-center text-primary mt-2">Image Gallery</h4>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-3" *ngFor="let item of allImages | filterimages: filterBy">
+                    <div class="card gallery-card">
+                        <div class="card-body">
+                            <img class="img-fluid" src="{{ item.url }}" />
+                            <p class="price-tag">Price: {{ item.price }}</p>
+                            <button class="btn btn-primary btn-block" [routerLink]="['/details', item.id]">
+                  Order Now
             </button>
-          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
 </div>
