--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,26 +10,13 @@
     <!-- Notice the name of id -->
     <div class="collapse navbar-collapse" id="collapse-target">
 
-        <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg" style="width: 100px; height:50px;"></a>
+        <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg" style="width: 90px; height:50px;"></a>
         <!-- <span class="navbar-text">Madhav Kulkarni</span> -->
 
 
         <ul class="navbar-nav">
-            <!-- <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown-target">
-                Dropdown
-                <span class="caret"></span>
-            </a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-target">
-                    <a href="" class="dropdown-item">Java Videos</a>
-                    <div class="dropdown-divider"></div>
-                    <a href="" class="dropdown-item">PHP Videos</a>
-                    <div class="dropdown-divider"></div>
-                    <a href="" class="dropdown-item">Angular Videos</a>
-                </div>
-            </li> -->
             <li class="nav-item">
-                <a [routerLink]="['/']" class="nav-link">Our Products</a>
+                <a [routerLink]="['/products']" class="nav-link">Our Products</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">About Us</a>
