--- a/src/app/image-gallary/image-gallary.component.html
+++ b/src/app/image-gallary/image-gallary.component.html
@@ -1,5 +1,5 @@
-<!-- <div class="bg-page" [style.background]="'url(../../assets/wallpaper.jpg)'"> -->
-<div [ngStyle]="{background: 'url(../../assets/wallpaper.jpg ) no-repeat 0 0', 'background-size': 'cover'}">
+<!-- <div [ngStyle]="{background: 'url(../../assets/wallpaper.jpg ) no-repeat 0 0', 'background-size': 'cover'}"> -->
+<div>
     <div class="page-wrapper">
         <div class="container">
             <div class="page-title">
