--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,9 +1,3 @@
-/* .navbar {
-    border: 0.2px solid orange;
-    border-bottom: 5px solid orange;
+.navbar-text {
+    text-decoration-color: aquamarine;
 }
-
-.navbar .logo-image {
-    width: 50px;
-    padding-right: 1rem;
-} */
