--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,28 +1,18 @@
-
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top sticky-top">
-
-    <!-- Toggle Button -->
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse-target">
-        <span class="navbar-toggler-icon"></span>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg" style="width: 150px; height:50px;"></a>
+    <button class="navbar-toggler" type="button" (click)="toggleNavbar = !toggleNavbar">
+      <span class="navbar-toggler-icon"></span>
     </button>
-
-    <!-- Add the elements whidh you want to collapse -->
-    <!-- Notice the name of id -->
-    <div class="collapse navbar-collapse" id="collapse-target">
-
-        <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg" style="width: 90px; height:50px;"></a>
-        <!-- <span class="navbar-text">Madhav Kulkarni</span> -->
-
-
+    <div class="collapse navbar-collapse" [ngbCollapse]="!toggleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a [routerLink]="['/products']" class="nav-link">Our Products</a>
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">About Us</a>
+                <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Contact Us</a>
+                <a class="nav-link" href="#">Pricing</a>
             </li>
         </ul>
     </div>
