--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<ngb-carousel *ngIf="images">
+<ngb-carousel>
     <ng-template ngbSlide>
         <img src="../../assets/wallpaper.jpg" alt="Random first slide" class='carouselImage'>
         <div class="carousel-caption">
