--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,71 +1,52 @@
-<footer class="bg-dark py-5">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="row">
-                    <div class="accordian d-lg-flex w-100" id="accordian">
-                        <div class="col-lg-4 col-md-12">
-                            <a href="#one" class="h4 text-white nav-link p-0 d-block d-lg-none d-xl-none" data-toggle="collapse" data-parent="#accordian">
-                             One
-                            </a>
-                            <div class="text-white h4 d-none d-lg-block d-xl-block">One</div>
-                            <div class="collapse text-white d-lg-flex" id="one" data-parent="#accordian">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt expedita quae vel dignissimos fugiat quod doloribus. Assumenda alias, asperiores repellendus ipsam doloremque nisi ratione reiciendis vero, porro, obcaecati rem aliquam?
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12">
-                            <a href="#two" class="h4 text-warning nav-link p-0 d-block d-lg-none d-xl-none" data-toggle="collapse">
-                                Two
-                            </a>
-                            <div class="text-warning h4 d-none d-lg-block d-xl-block">Two</div>
-                            <div class="collapse text-white d-lg-flex" id="two" data-parent="#accordian">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt expedita quae vel dignissimos fugiat quod doloribus. Assumenda alias, asperiores repellendus ipsam doloremque nisi ratione reiciendis vero, porro, obcaecati rem aliquam?
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12">
-                            <a href="#three" class="h4 text-white nav-link p-0 d-block d-lg-none d-xl-none" data-toggle="collapse">
-                                Connect with us..
-                            </a>
-                            <div class="text-white h4 d-none d-lg-block d-xl-block">Connect with us..</div>
-                            <div class="collapse text-white d-lg-flex" id="three" data-parent="#accordian">
-
-                                <ul class="list-unstyled d-flex w-100 justify-content-between">
-                                    <li>
-                                        <a href="#" class="nav-link p-0">
-                                            <i class="fa fa-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="nav-link p-0">
-                                            <i class="fa fa-twitter"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="nav-link p-0">
-                                            <i class="fa fa-instagram"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="nav-link p-0">
-                                            <i class="fa fa-youtube"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
+<footer>
+    <div class="footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <h4> Nakshatram Arts </h4>
+                    <ul>
+                        <li><img class="footer-image" src="../../assets/logo.jpg" alt=""></li>
+                    </ul>
                 </div>
+                <div class="col-lg-3 col-sm-2 col-xs-3">
+                    <h3> Address </h3>
+                    <ul>
+                        <li>
+                            <p> Nikhil Apartment, Sinhgad Road, </p>
+                        </li>
+                        <li>
+                            <p>Near Santosh Hall,</p>
+                        </li>
+                        <li>
+                            <p>Pune</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-sm-2 col-xs-3">
+                    <h3> Connect with Us.. </h3>
+                    <ul>
+                        <li>
+                            <h5><a href="#"> Facebook </a></h5>
+                        </li>
+                        <li>
+                            <h5><a href="#"> Instagram </a></h5>
+                        </li>
+                        <li>
+                            <h5><a href="#"> Twitter </a></h5>
+                        </li>
+                    </ul>
+                </div>
+
+
             </div>
         </div>
+
+        <div class="footer-bottom">
+            <div class="container">
+                <p class="pull-left copyright"> Copyright © 2019. All right reserved. </p>
+
+            </div>
+        </div>
+        <!--/.footer-bottom-->
     </div>
 </footer>
-<div class="container-fluid footer-bar">
-    <div class="row bg-warning">
-        <div class="col-md-12">
-            <div class="d-flex justify-content-center align-items-center">
-                <span class="p-3 text-white">Nakshatram Arts!!! Copyrights &copy; Reserved 2019.</span>
-            </div>
-        </div>
-    </div>
-</div>
