--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,31 +3,37 @@
     padding: 0;
 }
 
-.product-row {
-    padding: 25px;
-    border: 1px solid salmon;
-    align-content: center;
-}
-
-.product-image-right {
-    clear: both;
-    width: 250px;
-    height: 150px;
-    align-content: center;
-}
-
-.product-image-left {
-    clear: both;
-    width: 250px;
-    height: 150px;
-    align-content: center;
+.summary {
+    margin-top: 30px;
 }
 
 .carouselImage {
     width: 100%;
-    height: 600px;
+    height: 650px;
 }
 
 ::ng-deep .container-fluid {
     padding: 0 !important;
+}
+
+.carousel-caption {
+    margin-bottom: 20px;
+}
+
+.product-image {
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.summary img {
+    width: 60%;
+    height: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
+
+.card-body {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
