--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,84 @@
-<ngb-carousel>
+<ngb-carousel #carousel interval="3000" [pauseOnHover]="pauseOnHover">
     <ng-template ngbSlide>
-        <img src="../../assets/wallpaper.jpg" alt="Random first slide" class='carouselImage'>
+        <img class="animated zoomInLeft" src="../../assets/wallpaper.jpg" alt="Random first slide" class='carouselImage'>
         <div class="carousel-caption">
             <h3>First slide label</h3>
             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
     </ng-template>
     <ng-template ngbSlide>
-        <img src="../../assets/banner.jpg" alt="Random second slide" class='carouselImage'>
+        <img class="animated zoomInLeft" src="../../assets/banner.jpg" alt="Random second slide" class='carouselImage'>
         <div class="carousel-caption">
             <h3>Second slide label</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </ng-template>
     <ng-template ngbSlide>
-        <img src="../../assets/home-img.jpg" alt="Random third slide" class='carouselImage'>
+        <img class="animated zoomInLeft" src="../../assets/home-img.jpg" alt="Random third slide" class='carouselImage'>
         <div class="carousel-caption">
             <h3>Third slide label</h3>
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
     </ng-template>
+    <ng-template ngbSlide>
+        <img class="animated zoomInLeft" src="../../assets/1-banner.jpg" alt="Random third slide" class='carouselImage'>
+        <div class="carousel-caption">
+            <h3>Fourth slide label</h3>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        </div>
+    </ng-template>
 </ngb-carousel>
+
+
+<header class="bg-primary text-center py-5 mb-4">
+    <div class="container-fluid">
+        <h1 class="font-weight-light text-white">See Products Summary</h1>
+    </div>
+</header>
+
+<div class="container-fluid summary">
+    <div class="row">
+        <div class="col-xl-6 col-md-6 mb-6 product-image">
+            <div class="card border-0 shadow">
+                <img class="animated zoomIn" src="https://source.unsplash.com/rKE6rXOl14U/500x350" class="card-img-top" alt="...">
+                <div class="card-body text-center">
+                    <h5 class="card-title mb-0">3D LED Light Designs</h5>
+                    <div class="card-text text-black-50">Acrylic Designs</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-6 col-md-6 mb-6 product-image">
+            <div class="card border-0 shadow">
+                <img class="animated zoomInTop" src="https://source.unsplash.com/m3MOJG2sYBo/500x350" class="card-img-top" alt="...">
+                <div class="card-body text-center">
+                    <h5 class="card-title mb-0">Internal Hanging Lights</h5>
+                    <div class="card-text text-black-50">For Hotel/Offices</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-6 col-md-6 mb-6 product-image">
+            <div class="card border-0 shadow">
+                <img class="animated zoomInTop" src="https://source.unsplash.com/I4jC9D7r8Nc/500x350" class="card-img-top" alt="...">
+                <div class="card-body text-center">
+                    <h5 class="card-title mb-0">Night Lamps</h5>
+                    <div class="card-text text-black-50">Night Lamps</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-6 col-md-6 mb-6 product-image">
+            <div class="card border-0 shadow">
+                <img class="animated zoomInTop" src="https://source.unsplash.com/5VcSuWePr8Q/500x350" class="card-img-top" alt="...">
+                <div class="card-body text-center">
+                    <h5 class="card-title mb-0">Sign Board</h5>
+                    <div class="card-text text-black-50">Beautiful Sign Boards</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr>
+<app-business></app-business>
