--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,12 @@
-.navbar-text {
-    text-decoration-color: aquamarine;
+.navbar a {
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: large;
+    color: snow;
+}
+
+.navbar a:hover {
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
 }
