--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg" style="width: 150px; height:50px;"></a>
+    <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg" style="width: 150px; height:60px;"></a>
     <button class="navbar-toggler" type="button" (click)="toggleNavbar = !toggleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,10 +9,10 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link animated bounce" [routerLink]="['/products']">Our Products</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#contactus">Contact Us</a>
             </li>
         </ul>
     </div>
