--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,6 +14,7 @@
     height: auto;
     padding-bottom: 30px;
     position: relative;
+    bottom: 0 !important;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
     border-top: 1px solid #DDDDDD;
