--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -1,8 +1,10 @@
 <div id="contactus" class="container card-section">
     <div class="row">
-        <div class="col-12">
-            <img class="business-card animated zoomInUp" src="../../assets/card.jpeg" alt="business card">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <img class="business-card wow zoomInUp" data-wow-delay="1s" src="../../assets/card.jpeg" alt="business card">
         </div>
+        <div class="col-1"></div>
     </div>
 </div>
 
