--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,27 @@
-<ngb-carousel #carousel interval="3000" [pauseOnHover]="pauseOnHover">
+<ngb-carousel #carousel interval="2000" [pauseOnHover]="pauseOnHover">
     <ng-template ngbSlide>
-        <img class="animated zoomInLeft" src="../../assets/wallpaper.jpg" alt="Random first slide" class='carouselImage'>
-        <div class="carousel-caption">
+        <img src="../../assets/wallpaper.jpg" alt="Random first slide" class='carouselImage'>
+        <div class="carousel-caption animate zoomInUp">
             <h3>First slide label</h3>
             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
     </ng-template>
     <ng-template ngbSlide>
-        <img class="animated zoomInLeft" src="../../assets/banner.jpg" alt="Random second slide" class='carouselImage'>
+        <img src="../../assets/banner.jpg" alt="Random second slide" class='carouselImage'>
         <div class="carousel-caption">
             <h3>Second slide label</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </ng-template>
     <ng-template ngbSlide>
-        <img class="animated zoomInLeft" src="../../assets/home-img.jpg" alt="Random third slide" class='carouselImage'>
+        <img src="../../assets/home-img.jpg" alt="Random third slide" class='carouselImage'>
         <div class="carousel-caption">
             <h3>Third slide label</h3>
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
     </ng-template>
     <ng-template ngbSlide>
-        <img class="animated zoomInLeft" src="../../assets/1-banner.jpg" alt="Random third slide" class='carouselImage'>
+        <img src="../../assets/1-banner.jpg" alt="Random third slide" class='carouselImage'>
         <div class="carousel-caption">
             <h3>Fourth slide label</h3>
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -32,13 +32,13 @@
 
 <header class="bg-primary text-center py-5 mb-4">
     <div class="container-fluid">
-        <h1 class="font-weight-light text-white">See Products Summary</h1>
+        <h1 class="font-weight-light text-white wow zoomInUp" data-wow-duration="2s">See Products Summary</h1>
     </div>
 </header>
 
 <div class="container-fluid summary">
     <div class="row">
-        <div class="col-xl-6 col-md-6 mb-6 product-image">
+        <div class="col-xl-6 col-md-6 mb-6 product-image wow slideInLeft">
             <div class="card border-0 shadow">
                 <img class="animated zoomIn" src="https://source.unsplash.com/rKE6rXOl14U/500x350" class="card-img-top" alt="...">
                 <div class="card-body text-center">
@@ -48,9 +48,9 @@
             </div>
         </div>
 
-        <div class="col-xl-6 col-md-6 mb-6 product-image">
+        <div class="col-xl-6 col-md-6 mb-6 product-image  wow slideInRight">
             <div class="card border-0 shadow">
-                <img class="animated zoomInTop" src="https://source.unsplash.com/m3MOJG2sYBo/500x350" class="card-img-top" alt="...">
+                <img class="animated zoomInUp" src="https://source.unsplash.com/m3MOJG2sYBo/500x350" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                     <h5 class="card-title mb-0">Internal Hanging Lights</h5>
                     <div class="card-text text-black-50">For Hotel/Offices</div>
@@ -58,9 +58,9 @@
             </div>
         </div>
 
-        <div class="col-xl-6 col-md-6 mb-6 product-image">
+        <div class="col-xl-6 col-md-6 mb-6 product-image wow slideInLeft">
             <div class="card border-0 shadow">
-                <img class="animated zoomInTop" src="https://source.unsplash.com/I4jC9D7r8Nc/500x350" class="card-img-top" alt="...">
+                <img class="animated zoomInUp" src="https://source.unsplash.com/I4jC9D7r8Nc/500x350" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                     <h5 class="card-title mb-0">Night Lamps</h5>
                     <div class="card-text text-black-50">Night Lamps</div>
@@ -68,9 +68,9 @@
             </div>
         </div>
 
-        <div class="col-xl-6 col-md-6 mb-6 product-image">
+        <div class="col-xl-6 col-md-6 mb-6 product-image wow slideInRight">
             <div class="card border-0 shadow">
-                <img class="animated zoomInTop" src="https://source.unsplash.com/5VcSuWePr8Q/500x350" class="card-img-top" alt="...">
+                <img class="animated zoomInUp" src="https://source.unsplash.com/5VcSuWePr8Q/500x350" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                     <h5 class="card-title mb-0">Sign Board</h5>
                     <div class="card-text text-black-50">Beautiful Sign Boards</div>
