--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -1,11 +1,11 @@
-<div id="contactus" class="container card-section">
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-10">
-            <img class="business-card wow zoomInUp" data-wow-delay="1s" src="../../assets/card.jpeg" alt="business card">
+<div id="contactus" class="business-card">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-offset-2 col-center-content">
+                <div class="shadow">
+                    <img class="wow zoomInUp" data-wow-delay="1s" src="../../assets/card.jpeg" alt="business card">
+                </div>
+            </div>
         </div>
-        <div class="col-1"></div>
     </div>
 </div>
-
-<hr>
