--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,12 +1,15 @@
-.navbar a {
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size: large;
-    color: snow;
+.navbar {
+  background: #ffffff;
 }
-
+.navbar .navbar-toggler {
+  border: 1px solid #252525;
+}
+.navbar a {
+  font-family: "Roboto Slab", serif;
+  text-decoration: none;
+  color: #252525;
+}
 .navbar a:hover {
-    text-decoration: none;
-    font-weight: bold;
-    color: white;
+  text-decoration: none;
+  font-weight: bold;
 }
