--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg" style="width: 150px; height:60px;"></a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+  <div class="container">
+    <a [routerLink]="['/']" class="navbar-brand"><img src="../../assets/home-logo.jpg"
+        style="width: 150px; height:60px;" /></a>
     <button class="navbar-toggler" type="button" (click)="toggleNavbar = !toggleNavbar">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">
+
+      </span>
     </button>
     <div class="collapse navbar-collapse" [ngbCollapse]="!toggleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link animated bounce" [routerLink]="['/products']">Our Products</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#contactus">Contact Us</a>
-            </li>
-        </ul>
+      <ul class="navbar-nav text-center">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/products']">Our Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contactus">Contact Us</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
